# CS701-Group-09-Project

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
data/metadata/: test2_bbox.txt
notebooks/: EDA.ipynb  MedSAM.ipynb  modeling.ipynb  preprocessing.ipynb
results/EDA/: test_data_EDA_report.html  train_data_EDA_report.html
src/: inference.py  loader.py  preprocessing.py  trainer.py  utils.py  visualization.py
src/data_processing/: EDA.py  loader.py  preprocessing.py  visualization.py
src/modeling/: inference.py  models.py  trainer.py
src/nnunet/: main.ipynb  transform.ipynb
src/unet/: main.ipynb
