[tool.poetry]
name = "cs701-group-09"
version = "0.1.0"
description = "Project for CS701 Deep Learning and Vision, Medical Image Segmentation"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"
timm = "^1.0.9"
torchvision = "^0.19.1"
opencv-python = "^4.10.0.84"
matplotlib = "^3.9.2"
transformers = "^4.45.2"
ray = "^2.37.0"
pandas = "^2.2.3"
sweetviz = "^2.3.1"
numpy = "<2.0.0"
ipywidgets = "^8.1.5"
jupyter = "^1.1.1"
simpleitk = "^2.4.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.6.9"
flake8 = "^7.1.1"
mypy = "^1.11.2"
pytest = "^8.3.3"
pytest-cov = "^5.0.0"
ipykernel = "^6.29.5"
black = {extras = ["jupyter"], version = "^24.10.0"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
